--- a/src/main/webapp/app/entities/baby/baby-profile/detail/baby-profile-detail.component.html
+++ b/src/main/webapp/app/entities/baby/baby-profile/detail/baby-profile-detail.component.html
@@ -139,6 +139,31 @@
             </div>
           </div>
         </dd>
+        <dt class="align-self-center">
+          <span jhiTranslate="gatewayApp.babyBabyProfile.weight" class="align-self-center">Weight</span>
+        </dt>
+        <dd>
+          <div class="row align-items-center">
+            <div class="col-lg-2 col-sm-3 col-6 m-0 pr-0 text-center">
+              <a [routerLink]="['/weight']">
+                <div *ngIf="latestWeight">
+                  <span jhiTranslate="gatewayApp.babyBabyProfile.latestWeight" [translateValues]="{ weight: latestWeight?.value }"
+                    >{{ latestWeight?.value }} g</span
+                  >
+                </div>
+                <div *ngIf="!latestWeight">
+                  <fa-icon icon="window-minimize" class="text-muted"></fa-icon>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-10 col-sm-9 col-6 text-left">
+              <a [routerLink]="['/weight/new']" class="btn btn-primary m-0 text-white">
+                <fa-icon icon="plus"></fa-icon>
+                <span class="d-none d-sm-inline" jhiTranslate="gatewayApp.babyBabyProfile.addWight"> Weight </span>
+              </a>
+            </div>
+          </div>
+        </dd>
         <dt><span jhiTranslate="gatewayApp.babyBabyProfile.main">Main</span></dt>
         <dd>
           <div class="row">
