--- a/src/main/webapp/app/entities/baby/height/list/height.component.html
+++ b/src/main/webapp/app/entities/baby/height/list/height.component.html
@@ -18,6 +18,12 @@
         <span jhiTranslate="gatewayApp.babyHeight.home.createLabel"> Create a new Height </span>
       </button>
     </div>
+
+    <div class="d-flex justify-content-end mb-2 mt-2">
+      <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
+        <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back">Back</span>
+      </button>
+    </div>
   </h2>
 
   <jhi-alert-error></jhi-alert-error>
