--- a/src/main/webapp/app/entities/baby/humor-history/update/humor-history-update.component.html
+++ b/src/main/webapp/app/entities/baby/humor-history/update/humor-history-update.component.html
@@ -50,7 +50,13 @@
         </div>
 
         <div class="form-group">
-          <label class="form-control-label d-block" jhiTranslate="gatewayApp.babyHumorHistory.humor" for="field_humor">Humor</label>
+          <label
+            class="form-control-label d-block"
+            [ngClass]="editForm.get('humor')!.value == null ? 'ng-invalid' : ''"
+            jhiTranslate="gatewayApp.babyHumorHistory.humor"
+            for="field_humor"
+            >Humor</label
+          >
           <div class="d-inline" *ngFor="let humorOption of humorsSharedCollection; trackBy: trackHumorById">
             <input
               id="humor_{{ humorOption.id }}"
