--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -115,10 +115,13 @@
         </span>
       </div> -->
 
-      <div class="alert alert-warning" *ngSwitchCase="false">
+      <div class="alert alert-warning mt-2" *ngSwitchCase="false">
         <span jhiTranslate="global.messages.info.authenticated.prefix">If you want to </span>
-        <a class="alert-link" (click)="login()" jhiTranslate="global.messages.info.authenticated.link">sign in</a
-        ><span jhiTranslate="global.messages.info.authenticated.suffix"
+        <a class="alert-link" (click)="login()">
+          <fa-icon icon="sign-in-alt"></fa-icon>
+          <span jhiTranslate="global.messages.info.authenticated.link">sign in </span>
+        </a>
+        <span jhiTranslate="global.messages.info.authenticated.suffix"
           >, you can try the default accounts:<br />- Administrator (login="admin" and password="admin") <br />- User (login="user" and
           password="user").</span
         >
@@ -126,7 +129,10 @@
 
       <div class="alert alert-warning" *ngSwitchCase="false">
         <span jhiTranslate="global.messages.info.register.noaccount">You don't have an account yet?</span>&nbsp;
-        <a class="alert-link" routerLink="account/register" jhiTranslate="global.messages.info.register.link">Register a new account</a>
+        <a class="alert-link" routerLink="account/register">
+          <fa-icon icon="user-plus"></fa-icon>
+          <span jhiTranslate="global.messages.info.register.link">Register a new account </span>
+        </a>
       </div>
     </div>
 
