--- a/src/main/webapp/app/layouts/navbar/navbar.component.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.scss
@@ -70,3 +70,7 @@ custom styles for Mamazinha app
   background: url('../../../content/images/mamazinha-logo-navbar.png') no-repeat center center;
   background-size: contain;
 }
+
+.navbar-title {
+  font-size: 1.15rem;
+}
