--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -65,7 +65,7 @@
                     <tr>
                       <th scope="col"><span jhiTranslate="global.field.id">ID</span></th>
                       <th scope="col"><span jhiTranslate="gatewayApp.babyNap.start">Start</span></th>
-                      <th scope="col"><span jhiTranslate="gatewayApp.babyNap.place">Place</span></th>
+                      <th scope="col" class="text-center"><span jhiTranslate="gatewayApp.babyNap.place">Place</span></th>
                       <th scope="col"></th>
                     </tr>
                   </thead>
