--- a/src/main/webapp/app/entities/baby/breast-feed/list/breast-feed.component.html
+++ b/src/main/webapp/app/entities/baby/breast-feed/list/breast-feed.component.html
@@ -37,7 +37,7 @@
             <span jhiTranslate="gatewayApp.babyBreastFeed.start">Start</span> <fa-icon icon="sort"></fa-icon>
           </th>
           <th scope="col" jhiSortBy="end"><span jhiTranslate="gatewayApp.babyBreastFeed.end">End</span> <fa-icon icon="sort"></fa-icon></th>
-          <th scope="col" jhiSortBy="pain">
+          <th scope="col" jhiSortBy="pain" *jhiHasAnyAuthority="'ROLE_ADMIN'">
             <span jhiTranslate="gatewayApp.babyBreastFeed.pain">Pain</span> <fa-icon icon="sort"></fa-icon>
           </th>
           <th scope="col" jhiSortBy="babyProfile.name">
@@ -53,7 +53,7 @@
           </td>
           <td>{{ breastFeed.start | formatMediumDatetime }}</td>
           <td>{{ breastFeed.end | formatMediumDatetime }}</td>
-          <td jhiTranslate="{{ 'gatewayApp.Pain.' + breastFeed.pain }}">{{ breastFeed.pain }}</td>
+          <td jhiTranslate="{{ 'gatewayApp.Pain.' + breastFeed.pain }}" *jhiHasAnyAuthority="'ROLE_ADMIN'">{{ breastFeed.pain }}</td>
           <td>
             <div *ngIf="breastFeed.babyProfile">
               <a [routerLink]="['/baby-profile', breastFeed.babyProfile?.id, 'view']">{{ breastFeed.babyProfile?.name }}</a>
