--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -219,6 +219,20 @@
               <nvd3 [options]="napOptions" [data]="napData"></nvd3>
             </div>
           </div>
+          <div class="row mt-4 align-items-center">
+            <div class="col-3"></div>
+            <div class="col-9 col-md-9 text-right">
+              <a [routerLink]="['/breast-feed/new']" class="btn btn-primary m-0 mb-1 text-white">
+                <fa-icon icon="plus"></fa-icon>
+                <span jhiTranslate="home.logged.breastFeed.addBreastFeed"> Breast/Formula Feeding </span>
+              </a>
+            </div>
+          </div>
+          <div class="row mt-4" *ngIf="isShowWeekBreastFeedGraphic(breastFeedLastCurrentWeek)">
+            <div class="col-md-12 col-xs-12">
+              <nvd3 [options]="breastFeedOptions" [data]="breastFeedData"></nvd3>
+            </div>
+          </div>
         </div>
       </div>
       <!-- <div class="alert alert-success" *ngSwitchCase="true">
