--- a/src/main/webapp/app/entities/baby/breast-feed/update/breast-feed-update.component.html
+++ b/src/main/webapp/app/entities/baby/breast-feed/update/breast-feed-update.component.html
@@ -10,6 +10,9 @@
       </h2>
 
       <div>
+        <div class="alert alert-danger" *ngIf="dateError" jhiTranslate="gatewayApp.babyNap.validate.dateError">
+          The start date can't be greater than end date!
+        </div>
         <jhi-alert-error></jhi-alert-error>
 
         <div class="form-group" [hidden]="editForm.get('id')!.value == null">
