--- a/src/main/webapp/app/home/home.component.scss
+++ b/src/main/webapp/app/home/home.component.scss
@@ -44,3 +44,8 @@ custom styles for Mamazinha app
     background-size: contain;
   }
 }
+
+.nvd3-chart-title {
+  display: block;
+  text-align: center;
+}
