--- a/src/main/webapp/app/entities/baby/baby-profile/detail/baby-profile-detail.component.html
+++ b/src/main/webapp/app/entities/baby/baby-profile/detail/baby-profile-detail.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-8 col-sm-12">
     <div *ngIf="babyProfile">
       <h2 data-cy="babyProfileDetailsHeading">
-        <span jhiTranslate="gatewayApp.babyBabyProfile.detail.title" [translateValues]="{ date: currentDate | date: 'd MMM' }"
+        <span jhiTranslate="gatewayApp.babyBabyProfile.detail.title" [translateValues]="{ date: currentTodayDateShortFormat }"
           >Baby Profile</span
         >
       </h2>
@@ -77,7 +77,7 @@
           <div class="row align-items-center">
             <div class="col-lg-2 col-sm-3 col-6 m-0 pr-0 text-center">
               <a [routerLink]="['/nap']">
-                <div *ngIf="humorAverageNap">
+                <div *ngIf="humorAverageNap && humorAverageNap?.humorAverage > 0">
                   <div [ngSwitch]="humorAverageNap?.humorAverage">
                     <fa-icon *ngSwitchCase="1" icon="angry" class="emoji angry select"></fa-icon>
                     <fa-icon *ngSwitchCase="2" icon="frown" class="emoji frown select"></fa-icon>
@@ -86,26 +86,30 @@
                     <fa-icon *ngSwitchCase="5" icon="laugh" class="emoji laugh select"></fa-icon>
                   </div>
                 </div>
-                <div *ngIf="!humorAverageNap">
+                <div *ngIf="humorAverageNap && humorAverageNap?.humorAverage === 0">
                   <fa-icon icon="window-minimize" class="text-muted"></fa-icon>
                 </div>
               </a>
             </div>
             <div class="col-lg-10 col-sm-9 col-6 text-left">
-              <a [routerLink]="['/nap/new']" class="btn btn-primary m-0 text-white">
+              <a [routerLink]="['/nap/new']" class="btn btn-primary m-0 text-white p-2 mt-1">
                 <fa-icon icon="plus"></fa-icon>
                 <span class="d-none d-sm-inline" jhiTranslate="gatewayApp.babyBabyProfile.addNap"> Nap </span>
               </a>
+              <button (click)="showHideWeekAverageNapHumorGraphic()" class="btn btn-info btn-sm p-2 mt-1">
+                <fa-icon icon="chart-area"></fa-icon>
+              </button>
             </div>
           </div>
         </dd>
-      </dl>
-      <div class="row mt-5" *ngIf="isShowWeekAverageNapHumorGraphic(averageNapHumorLastCurrentWeek)">
-        <div class="col-md-12 col-xs-12">
-          <nvd3 [options]="averageNapHumorOptions" [data]="averageNapHumorData"></nvd3>
-        </div>
-      </div>
-      <dl class="row-md jh-entity-details">
+        <dt *ngIf="isShowWeekAverageNapHumorGraphic(averageNapHumorLastCurrentWeek)"></dt>
+        <dd class="gird-col-span-2" *ngIf="isShowWeekAverageNapHumorGraphic(averageNapHumorLastCurrentWeek)">
+          <div class="row mt-1">
+            <div class="col-md-12 col-xs-12">
+              <nvd3 [options]="averageNapHumorOptions" [data]="averageNapHumorData"></nvd3>
+            </div>
+          </div>
+        </dd>
         <dt>
           <span jhiTranslate="gatewayApp.babyBabyProfile.favoriteNapPlace" class="d-block align-self-center"
             >Favorite Nap Place (from last {{ favoriteNapPlace?.periodInDays }} days)</span
