--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -260,4 +260,7 @@ body {
 .emoji.laugh.select {
   color: green;
 }
+.gird-col-span-2 {
+  grid-column: 1/3;
+}
 /* jhipster-needle-scss-add-main JHipster will add new css style */
