--- a/src/main/webapp/app/entities/baby/baby-profile/detail/baby-profile-detail.component.html
+++ b/src/main/webapp/app/entities/baby/baby-profile/detail/baby-profile-detail.component.html
@@ -50,7 +50,7 @@
           <div class="row align-items-center">
             <div class="col-lg-2 col-sm-3 col-6 m-0 pr-0 text-center">
               <a [routerLink]="['/humor-history']">
-                <div *ngIf="humorAverageHumorHistory">
+                <div *ngIf="humorAverageHumorHistory && humorAverageHumorHistory?.humorAverage > 0">
                   <div [ngSwitch]="humorAverageHumorHistory?.humorAverage">
                     <fa-icon *ngSwitchCase="1" icon="angry" class="emoji angry select"></fa-icon>
                     <fa-icon *ngSwitchCase="2" icon="frown" class="emoji frown select"></fa-icon>
@@ -59,16 +59,27 @@
                     <fa-icon *ngSwitchCase="5" icon="laugh" class="emoji laugh select"></fa-icon>
                   </div>
                 </div>
-                <div *ngIf="!humorAverageHumorHistory">
+                <div *ngIf="humorAverageHumorHistory && humorAverageHumorHistory?.humorAverage === 0">
                   <fa-icon icon="window-minimize" class="text-muted"></fa-icon>
                 </div>
               </a>
             </div>
             <div class="col-lg-10 col-sm-9 col-6 text-left">
-              <a [routerLink]="['/humor-history/new']" class="btn btn-primary m-0 text-white">
+              <a [routerLink]="['/humor-history/new']" class="btn btn-primary m-0 text-white p-2 mt-1">
                 <fa-icon icon="plus"></fa-icon>
                 <span class="d-none d-sm-inline" jhiTranslate="gatewayApp.babyBabyProfile.addHumorHistory"> Humor </span>
               </a>
+              <button (click)="showHideWeekAverageHumorHistoryGraphic()" class="btn btn-info btn-sm p-2 mt-1">
+                <fa-icon icon="chart-area"></fa-icon>
+              </button>
+            </div>
+          </div>
+        </dd>
+        <dt *ngIf="isShowWeekAverageHumorHistoryGraphic(averageHumorHistoryLastCurrentWeek)"></dt>
+        <dd class="gird-col-span-2" *ngIf="isShowWeekAverageHumorHistoryGraphic(averageHumorHistoryLastCurrentWeek)">
+          <div class="row mt-1">
+            <div class="col-md-12 col-xs-12">
+              <nvd3 [options]="averageHumorHistoryOptions" [data]="averageHumorHistoryData"></nvd3>
             </div>
           </div>
         </dd>
