--- a/src/main/webapp/app/entities/baby/baby-profile/detail/baby-profile-detail.component.html
+++ b/src/main/webapp/app/entities/baby/baby-profile/detail/baby-profile-detail.component.html
@@ -179,10 +179,22 @@
               </a>
             </div>
             <div class="col-lg-10 col-sm-9 col-6 text-left">
-              <a [routerLink]="['/weight/new']" class="btn btn-primary m-0 text-white">
+              <a [routerLink]="['/weight/new']" class="btn btn-primary m-0 text-white p-2 mt-1">
                 <fa-icon icon="plus"></fa-icon>
                 <span class="d-none d-sm-inline" jhiTranslate="gatewayApp.babyBabyProfile.addWight"> Weight </span>
               </a>
+              <button (click)="showHideLastWeightsDaysAgoGraphic()" class="btn btn-info btn-sm p-2 mt-1">
+                <fa-icon icon="chart-area"></fa-icon>
+              </button>
+            </div>
+          </div>
+        </dd>
+        <dt *ngIf="isShowLastWeightsDaysAgoGraphic(lastWeightsDaysAgo)"></dt>
+        <dd class="gird-col-span-2" *ngIf="isShowLastWeightsDaysAgoGraphic(lastWeightsDaysAgo)">
+          <div class="row mt-1">
+            <div class="col-md-12 col-xs-12">
+              <h4 class="nvd3-chart-title mobile">{{ d3ChartTranslate.last30Days }}</h4>
+              <nvd3 [options]="lastWeightsDaysAgoOptions" [data]="lastWeightsDaysAgoData"></nvd3>
             </div>
           </div>
         </dd>
