--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -263,4 +263,12 @@ body {
 .gird-col-span-2 {
   grid-column: 1/3;
 }
+.nvd3-chart-title {
+  display: block;
+  text-align: center;
+}
+
+h4.mobile {
+  font-size: 1.15rem;
+}
 /* jhipster-needle-scss-add-main JHipster will add new css style */
