--- a/src/main/webapp/app/entities/baby/baby-profile/detail/baby-profile-detail.component.html
+++ b/src/main/webapp/app/entities/baby/baby-profile/detail/baby-profile-detail.component.html
@@ -154,7 +154,7 @@
               </a>
             </div>
             <div class="col-lg-10 col-sm-9 col-6 text-left">
-              <a [routerLink]="['/nap/new']" class="btn btn-primary m-0 text-white">
+              <a [routerLink]="['/nap/new']" class="btn btn-primary m-0 text-white p-2 mt-1">
                 <fa-icon icon="plus"></fa-icon>
                 <span class="d-none d-sm-inline" jhiTranslate="gatewayApp.babyBabyProfile.addNap"> Nap </span>
               </a>
@@ -183,7 +183,11 @@
                 <fa-icon icon="plus"></fa-icon>
                 <span class="d-none d-sm-inline" jhiTranslate="gatewayApp.babyBabyProfile.addWight"> Weight </span>
               </a>
-              <button (click)="showHideLastWeightsDaysAgoGraphic()" class="btn btn-info btn-sm p-2 mt-1">
+              <button
+                (click)="showHideLastWeightsDaysAgoGraphic()"
+                [hidden]="hideLastWeightsDaysAgoGraphicIcon"
+                class="btn btn-info btn-sm p-2 mt-1"
+              >
                 <fa-icon icon="chart-area"></fa-icon>
               </button>
             </div>
@@ -220,7 +224,11 @@
                 <fa-icon icon="plus"></fa-icon>
                 <span class="d-none d-sm-inline" jhiTranslate="gatewayApp.babyBabyProfile.addHight"> Height </span>
               </a>
-              <button (click)="showHideLastHeightsDaysAgoGraphic()" class="btn btn-info btn-sm p-2 mt-1">
+              <button
+                (click)="showHideLastHeightsDaysAgoGraphic()"
+                [hidden]="hideLastHeightsDaysAgoGraphicIcon"
+                class="btn btn-info btn-sm p-2 mt-1"
+              >
                 <fa-icon icon="chart-area"></fa-icon>
               </button>
             </div>
